# Invaders

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: World.h  controls.h  entity.h  log.h  render_window.h  system.h  utils.h
include/components/: gravity.h  renderable.h  rigid_body.h  transform.h
include/core/: component_array.h  component_manager.h  coordinator.h  entity_manager.h  system.h  system_manager.h  types.h
include/game/: game.h
include/sdlwrap/: chunk.h  font.h  mixer.h  music.h  rect.h  renderer.h  sdl.h  sdlwrap.h  surface.h  texture.h  window.h
include/systems/: render_system.h
src/: entity.cc  log.cc  main.cc  render_window.cc  sdl.cc  temp.h  utils.cc  window.cc
src/game/: game.cc
src/sdlwrap/: chunk.cc  font.cc  mixer.cc  music.cc  renderer.cc  sdl.cc  surface.cc  texture.cc  window.cc
src/systems/: render_system.cc
